k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: url-shortener
spec:
  type: NodePort
  selector:
    app: api-gateway
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30080
